# smarttips

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml  setup.sh  turbo.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-preview.yml  deploy-prod.yml  security.yml
apps/api/: README.md  eslint.config.js  jest.config.js  nixpacks.toml  package.json  railway.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts  placeholder.ts
apps/api/src/audit/: audit.module.ts  audit.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/dashboard/: dashboard.controller.ts  dashboard.service.ts
apps/api/src/distribution/: distribution.controller.ts  distribution.mapper.ts  distribution.module.ts  distribution.service.ts  distribution.types.ts
apps/api/src/email/: email.service.spec.ts  email.service.ts
apps/api/src/employees/: employees.controller.ts  employees.service.ts
apps/api/src/invitations/: invitations.controller.spec.ts  invitations.controller.ts  invitations.module.ts  invitations.service.spec.ts  invitations.service.ts
apps/api/src/menu-categories/: menu-categories.controller.ts  menu-categories.module.ts  menu-categories.service.ts
apps/api/src/menu-items/: menu-items.controller.ts  menu-items.module.ts  menu-items.service.ts
apps/api/src/orders/: orders.controller.ts  orders.service.ts
apps/api/src/reports/: reports.controller.ts  reports.module.ts  reports.service.ts
apps/api/src/shifts/: shifts.controller.ts  shifts.service.ts
apps/api/src/tenant-config/: tenant-config.controller.ts  tenant-config.module.ts  tenant-config.service.ts
apps/api/src/tip-pools/: tip-pools.controller.ts  tip-pools.module.ts  tip-pools.service.ts
apps/data-generator/: pyproject.toml
apps/data-generator/data/synthetic/: ml-training.csv
apps/data-generator/generator/: _alloc.py  _ids.py  cli.py  config.py  domain.py  employees.py  menu.py  orders.py  patterns.py  rng.py  shifts.py  tips.py
apps/data-generator/generator/writers/: csv_writer.py  json_writer.py
apps/data-generator/tests/: test_config.py  test_csv_writer.py  test_determinism.py  test_domain.py  test_employees.py  test_ids.py  test_menu.py  test_orders.py  test_patterns.py  test_rng.py  test_shifts.py  test_tips.py
apps/ml-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/ml-service/app/: __init__.py  main.py
apps/ml-service/app/api/: deps.py  routes.py
apps/ml-service/app/core/: config.py  logging.py  security.py
apps/ml-service/app/models/: distribution_allocation.py  distribution_features.py  distribution_model.py  distribution_training.py  features.py  tip_model.py
apps/ml-service/app/schemas/: common.py  distribution.py  predict.py  train.py
apps/ml-service/app/services/: model_service.py
apps/ml-service/app/storage/: base.py  local_store.py  model_store.py  r2_store.py
apps/ml-service/tests/: test_distribution_allocation.py  test_distribution_features.py  test_distribution_model.py  test_distribution_progressive_validation.py  test_distribution_service.py  test_pool_storage_regression.py
apps/web/: .gitignore  README.md  eslint.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts  placeholder.ts
apps/web/src/app/: globals.css  layout.tsx  providers.tsx  robots.ts  sitemap.ts
apps/web/src/config/: employee-roles.ts
apps/web/src/contexts/: auth.context.tsx
apps/web/src/hooks/: use-auth.ts  use-dashboard-stats.ts  use-employees.ts  use-invitations.ts  use-menu-categories.ts  use-menu-items.ts  use-orders.ts  use-responsive.ts  use-shifts.ts  use-tip-pools.ts
apps/web/src/lib/: api-client.ts  category-labels.ts  errors.ts  query-keys.ts  scroll-lock.ts  (+1 more)
docs/: DATABASE.md
docs/adr/: 001-multi-tenancy.md  002-auth.md  003-monorepo.md  004-ml-service.md  005-river-online-learning.md  ADR-001-multi-tenancy.md  ADR-002-auth-jwt-refresh.md  ADR-003-monorepo-turborepo.md  ADR-004-ml-microservice.md  ADR-005-river-online-learning.md  ADR-006-distribution-algorithm.md  README.md
interview-prep/: README.md  elevator-pitch.md
scripts/postgres-init/: 01-extensions.sql
(+152 files in other folders)
