[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = "SmartTips ML microservice - tenant-isolated online learning with River"
authors = ["Brydel Fosso Saounde"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

fastapi = ">=0.121.3,<0.137.0"
uvicorn = { extras = ["standard"], version = ">=0.42.0,<0.49.0" }
pydantic-settings = ">=2.13.0,<2.15.0"

river = ">=0.24.2,<0.25.0"

boto3 = ">=1.43.0,<1.45.0"
joblib = ">=1.4.2,<1.6.0"

python-json-logger = ">=3.3.0,<4.0.0"
prometheus-client = ">=0.22.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<10.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"
httpx = ">=0.28.0,<1.0.0"
hypothesis = ">=6.140.0,<7.0.0"

ruff = ">=0.14.0,<0.15.0"
mypy = ">=1.18.0,<2.0.0"
bandit = ">=1.8.0,<2.0.0"
pip-audit = ">=2.9.0,<3.0.0"

[tool.poetry.scripts]
start = "app.main:run"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "N",
  "S",
  "ASYNC",
  "RUF",
]
ignore = [
  "S101"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
plugins = []

[tool.bandit]
exclude_dirs = ["tests"]
skips = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "boto3",
  "botocore.*",
  "joblib",
]
ignore_missing_imports = true